==

* Tags can be modified on multiple marked threads with + and -.
* Modify tags on single message, they are updated in thread-view
  and thread-index.
* scss: fix #82: make all variables global.
* C-d / C-u / Page in thread-index: Page and move cursor in thread
  index.

== v0.5 / 2016-02-06

* Startup queries are invincible.
* q: ask to quit, Q: quit right away.
* C-f: Toggle flat or indented view of messages.
* C-i: Show remote images (cid-type images are not supported yet).
* A-#: Page to # page.
* Add gravatar support
* M-p: Toggle auto poll.
* C-j / C-k: Jump and scroll to next or previous element.
* thread-index: C-Enter: open thread in new window.
* Add popup menu with some actions for the thread-index.
* Fix #23: Don't crash when message file is missing.
* #25: Load html and scss from config/ui directory if present.
* #25: Allow some parameters of the thread_index cells to be configured.
* Move 'expand all' in thread view to C-e.
* Save drafts with 's', discard them with 'D', edit them with 'E' from
  thread index or thread view.
* Edit messages as new with 'E'.
* Added a dinosaur.
* Configurable keybindings in ~/.config/astroid/keybindings.
* Show name of pre-defined searches in tab.
* Tab: jump to next unread thread.
* X: Force close tab.
* C-s: Cycle through sorting the thread_index (default configurable)
* Configurable sent-tags (per-account and global)
* Allow messages to be sent as attachments.
* Hugo Roy: Fix licences to be correct for borrowed stuff.
* Franz Fellner: Fix some long standing annoying bugs.
* Use ',' as separator for 'for_tags' in config, not ';'.
* Hugo Roy: Refurbished thread-view theme and move to scss processing,
  your custom thread-view.css needs some attention.
* Franz Fellner: Clean-up coding style and name-space pollution.
* Hugo Roy: Made a tour of setting up astroid in the wiki.
* Print message with C-P and print marked messages with t+p.
* Run-hooks: Run user-defined shell hooks on keypress using keybinding